--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                    tabel</div>
+                                    New Projects</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">278</div>
                             </div>
                             <div class="col-auto">
@@ -125,7 +125,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                    tabel</div>
+                                    New Clients</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">278</div>
                             </div>
                             <div class="col-auto">
@@ -142,7 +142,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                    tabel</div>
+                                    Conversion Rate</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">278</div>
                             </div>
                             <div class="col-auto">
@@ -159,7 +159,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                    tabel</div>
+                                    Support Tickets</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">278</div>
                             </div>
                             <div class="col-auto">
@@ -179,7 +179,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                    tabel</div>
+                                    New Posts</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">278</div>
                             </div>
                             <div class="col-auto">
@@ -196,7 +196,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                    tabel</div>
+                                    New Comments</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">278</div>
                             </div>
                             <div class="col-auto">
@@ -213,7 +213,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                    tabel</div>
+                                    Bounce Rate</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">278</div>
                             </div>
                             <div class="col-auto">
@@ -230,7 +230,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                    tabel</div>
+                                    Total Visit</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">278</div>
                             </div>
                             <div class="col-auto">
